--- a/0actor/actor.html
+++ b/0actor/actor.html
@@ -336,24 +336,24 @@
         <iframe frameborder="0" scrolling="no" src="circle/circle.html" width="100%" height="500px"></iframe>
     </div>
 
-    <!--part7朱一龙48-->
+    <!--part7写真朱一龙48-->
     <div id="part7">
         <iframe frameborder="0" scrolling="no" src="yilong48/yilong48.html" width="100%" height="700px"></iframe>
     </div>
 
-    <!--part7弹幕表白+立方体图片-->
+    <!--part8弹幕表白+立方体图片-->
     <div class="cube_danmu" id="part8">
         <iframe frameborder="0" scrolling="no" src="cube/cube.html" width="100%" height="600px"></iframe>
     </div>
 
-    <!--part8 七夕-->
+    <!--part9 七夕-->
     <div>
         <iframe frameborder="0" scrolling="no" src="blink.html" width="100%" height="150px"></iframe>
     </div>
     <!--声明-->
     <div class="statement">
         <p>
-            作者：<a href="https://weibo.com/2512655487/profile?rightmod=1&wvr=6&mod=personinfo">@风来不觉晓</a>
+            作者：<a target="_blank" href="https://weibo.com/2512655487/profile?rightmod=1&wvr=6&mod=personinfo">@风来不觉晓</a>
         <p>
             图片来源：
             <a target="_blank" href="https://weibo.com/zhuyilong?refer_flag=1001030101_&is_all=1">@朱一龙 </a>
