--- a/rings/rings2.html
+++ b/rings/rings2.html
@@ -135,122 +135,11 @@
     <!--歌单-->
     <div>
         <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=450 src="https://music.163.com/outchain/player?type=1&id=146212&auto=0&height=430"></iframe>
+
+        <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=450 src="https://music.163.com/outchain/player?type=1&id=146212&auto=1&height=430"></iframe>
     </div>
     
-    <div>
-        <section style="border: 0px none;">
-            <section style="width:100%;" data-width="100%">
-                <section style="width:600px; margin:10px auto; height:600px; background-image:url(http://mpt.135editor.com/mmbiz_png/fgnkxfGnnkRrQ0TfHhvdSmYqibglLqichGYybEPEO1t8wjNavE7qE5cZmjHvIuYe04ehJiciaGEL7txubzCCAQQZBw/0?wx_fmt=png); background-repeat:no-repeat; background-size:100% auto; overflow:hidden;">
-                    <section style="width:100%; text-align:center; color:#fff;" data-width="100%">
-                        <section style=" font-size:18px; font-weight:bold;">
-                            圣诞结
-                        </section>
-                        <section style="font-size:12px;">
-                            演唱：陈奕迅
-                        </section>
-                    </section>
-                    <svg xmlns="http://www.w3.org/2000/svg" style="width:100%;height:500px;" data-width="100%">
-                        <text y="103.795%" x="50%" fill="#fff" style="font-size:16px;text-anchor: middle;box-sizing:border-box">
-                            <tspan data-brushtype="text">
-                                我住的城市从不下雪
-                            </tspan>
-                            <animate attributename="y" from="120%" to="0" begin="4s" dur="8s" repeatcount="indefinite"></animate>
-                        </text>
-                        <text y="109.795%" x="50%" fill="#fff" style="font-size:16px;text-anchor: middle;box-sizing:border-box">
-                            <tspan data-brushtype="text">
-                                记忆却堆满冷的感觉
-                            </tspan>
-                            <animate attributename="y" from="120%" to="0" begin="4.4s" dur="8s" repeatcount="indefinite"></animate>
-                        </text>
-                        <text y="115.795%" x="50%" fill="#fff" style="font-size:16px;text-anchor: middle;box-sizing:border-box">
-                            <tspan data-brushtype="text">
-                                思念的旺季霓虹扫过喧哗的街
-                            </tspan>
-                            <animate attributename="y" from="120%" to="0" begin="4.8s" dur="8s" repeatcount="indefinite"></animate>
-                        </text>
-                        <text y="8.97449" x="50%" fill="#fff" style="font-size:16px;text-anchor: middle;box-sizing:border-box">
-                            <tspan data-brushtype="text">
-                                把快乐赶得好远
-                            </tspan>
-                            <animate attributename="y" from="120%" to="0" begin="5.2s" dur="8s" repeatcount="indefinite"></animate>
-                        </text>
-                        <text y="38.9745" x="50%" fill="#fff" style="font-size:16px;text-anchor: middle;box-sizing:border-box">
-                            <tspan data-brushtype="text">
-                                落单的恋人最怕过节
-                            </tspan>
-                            <animate attributename="y" from="120%" to="0" begin="5.6s" dur="8s" repeatcount="indefinite"></animate>
-                        </text>
-                        <text y="68.9745" x="50%" fill="#fff" style="font-size:16px;text-anchor: middle;box-sizing:border-box">
-                            <tspan data-brushtype="text">
-                                只能独自庆祝尽量喝醉
-                            </tspan>
-                            <animate attributename="y" from="120%" to="0" begin="6s" dur="8s" repeatcount="indefinite"></animate>
-                        </text>
-                        <text y="98.9745" x="50%" fill="#fff" style="font-size:16px;text-anchor: middle;box-sizing:border-box">
-                            <tspan data-brushtype="text">
-                                我爱过的人没有一个留在身边
-                            </tspan>
-                            <animate attributename="y" from="120%" to="0" begin="6.4s" dur="8s" repeatcount="indefinite"></animate>
-                        </text>
-                        <text y="128.974" x="50%" fill="#fff" style="font-size:16px;text-anchor: middle;box-sizing:border-box">
-                            <tspan data-brushtype="text">
-                                寂寞他陪我过夜
-                            </tspan>
-                            <animate attributename="y" from="120%" to="0" begin="6.8s" dur="8s" repeatcount="indefinite"></animate>
-                        </text>
-                        <text y="158.974" x="50%" fill="#fff" style="font-size:16px;text-anchor: middle;box-sizing:border-box">
-                            <tspan data-brushtype="text">
-                                Merry Merry Christmas
-                            </tspan>
-                            <animate attributename="y" from="120%" to="0" begin="7.2s" dur="8s" repeatcount="indefinite"></animate>
-                        </text>
-                        <text y="188.974" x="50%" fill="#fff" style="font-size:16px;text-anchor: middle;box-sizing:border-box">
-                            <tspan data-brushtype="text">
-                                Lonely Lonely Christmas
-                            </tspan>
-                            <animate attributename="y" from="120%" to="0" begin="7.6s" dur="8s" repeatcount="indefinite"></animate>
-                        </text>
-                        <text y="218.974" x="50%" fill="#fff" style="font-size:16px;text-anchor: middle;box-sizing:border-box">
-                            <tspan data-brushtype="text">
-                                想祝福不知该给谁
-                            </tspan>
-                            <animate attributename="y" from="120%" to="0" begin="8s" dur="8s" repeatcount="indefinite"></animate>
-                        </text>
-                        <text y="248.974" x="50%" fill="#fff" style="font-size:16px;text-anchor: middle;box-sizing:border-box">
-                            <tspan data-brushtype="text">
-                                爱被我们打了死结
-                            </tspan>
-                            <animate attributename="y" from="120%" to="0" begin="8.4s" dur="8s" repeatcount="indefinite"></animate>
-                        </text>
-                        <text y="278.974" x="50%" fill="#fff" style="font-size:16px;text-anchor: middle;box-sizing:border-box">
-                            <tspan data-brushtype="text">
-                                Merry Merry Christmas
-                            </tspan>
-                            <animate attributename="y" from="120%" to="0" begin="8.8s" dur="8s" repeatcount="indefinite"></animate>
-                        </text>
-                        <text y="61.7949%" x="50%" fill="#fff" style="font-size:16px;text-anchor: middle;box-sizing:border-box">
-                            <tspan data-brushtype="text">
-                                Lonely Lonely Christmas
-                            </tspan>
-                            <animate attributename="y" from="120%" to="0" begin="9.2s" dur="8s" repeatcount="indefinite"></animate>
-                        </text>
-                        <text y="67.7949%" x="50%" fill="#fff" style="font-size:16px;text-anchor: middle;box-sizing:border-box">
-                            <tspan data-brushtype="text">
-                                写了卡片能寄给谁
-                            </tspan>
-                            <animate attributename="y" from="120%" to="0" begin="9.6s" dur="8s" repeatcount="indefinite"></animate>
-                        </text>
-                        <text y="73.7949%" x="50%" fill="#fff" style="font-size:16px;text-anchor: middle;box-sizing:border-box">
-                            <tspan data-brushtype="text">
-                                心碎得像街上的纸屑
-                            </tspan>
-                            <animate attributename="y" from="120%" to="0" begin="10s" dur="8s" repeatcount="indefinite"></animate>
-                        </text>
-                    </svg>
-                </section>
-            </section>
-        </section>
-    </div>
+   
     <div>
         <pre>
 	素材来源于网络
